trying to fix image stretch chrome issue

--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -1,13 +1,13 @@
 .About {
-    width: 100%;
     background-color: #f15555;
-    background: url('../../assets/98doiv3c.bmp');
-    background-position: right bottom;
+    background-image: url('../../assets/98doiv3c.bmp');
+    color: #EAF2F8;
+    width: 100%;
+    /* height: 100vh; */
     left: 0;
     top: 0;
     /* padding-left: 1rem; */
     padding-bottom: 50px;
-    max-width: 1450px;
 }
 
 .About h1 {
@@ -82,6 +82,7 @@
     /* background-color: #34495E; */
     border-radius: 20px;
     padding: 10px;
+    max-width: 1200px;
 }
 
 /* .BackgroundBlock {
@@ -154,12 +155,12 @@
 
 .SkillsBlock {
     width: 100%;
-    height: 364px;
     border-radius: 0 20px 20px 0;
     background-color: #17202A;
     font-family: Consolas;
     z-index: 50;
     margin-top: 15px;
+    padding-bottom: 10px;
     /* box-shadow: -4px 3px 4px rgba(0, 0, 0, 0.25); */
     background: rgba(28, 28, 29, 0.9);
     margin-left: -15px;
