--- a/src/Components/Titlecard/Titlecard.module.css
+++ b/src/Components/Titlecard/Titlecard.module.css
@@ -96,12 +96,19 @@
     border-color: black;
 }
 
-.DesktopFace {
+.imgWrapper {
     width: 90%;
     height: 530px;
     border-radius: 20px;
-    object-fit: cover;
     margin: 20px;
+    overflow: hidden;
+}
+
+.DesktopFace {
+    border-radius: 20px;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 @media screen and (max-width: 1146px) {
